# brainfield

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI-daily.yml  CI.yml  Publish.yml
brainfield/: __init__.py  bold.py  difusive_coupling.py  integration.py  noise.py  noise_test.py  wilson_cowan.py
brainmass/: __init__.py  _common.py  aln.py  bold.py  coupling.py  difusive_coupling.py  fhn.py  fhn_test.py  forward_model.py  hopf.py  hopf_coupling.py  hopf_test.py  integration.py  jansen_rit.py  jansen_rit_test.py  linear.py  linear_test.py  noise.py  noise_test.py  param.py  param_transform.py  param_transform_test.py  qif.py  qif_test.py  sl.py  sl_test.py  vdp.py  vdp_test.py  wilson_cowan.py  wilson_cowan_test.py  wong_wang.py
brainmass/net/: cosine.py  jansen_rit.py  jansen_rit_test.py
docs/: api.rst  conf.py  index.rst
examples/: 00-hopf-osillator.ipynb  01-wilsonwowan-osillator.ipynb  02-fhn-osillator.ipynb  10-parameter-exploration.ipynb  11-nevergrad-optimization.ipynb  12-scipy-optimization.ipynb  MEG.py  Modeling_resting_state_MEG_data.ipynb  aln-osillator.py  cosine.py  hopf-osillator.ipynb  jansenrit_node.py  jansenrit_single_node_simulation.py  model_fit_LM.py  momi2023.ipynb  momi2023.py  parameter-exploration.ipynb  parameter-exploration.py  tutorial.ipynb  wc-osillator.py  wilsonwowan-osillator.ipynb  wilsonwowan-osillator.py
examples/datasets/: README.md  __init__.py  load_data.py
examples/datasets/hcp/102816/structural/: waytotal.txt
examples/datasets/hcp/131217/structural/: waytotal.txt
(+1 files in other folders)
