[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
exclude = [
    "docs*", 
    "build*", 
    "dist*", 
    "dev*",
    "brainmass.egg-info*", 
    "brainmass/__pycache__*",
    "brainmass/__init__.py"
]


[tool.distutils.bdist_wheel]
universal = true


[project]
name = "brainmass"
description = ""
readme = 'README.md'
license = { text = 'Apache-2.0 license' }
requires-python = '>=3.10'
authors = [{ name = 'BrainMass Developers', email = 'chao.brain@qq.com' }]
classifiers = [
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Software Development :: Libraries',
]


keywords = ['physical unit', 'physical quantity', 'brain modeling']

dependencies = [
    'jax',
    'numpy',
]

dynamic = ['version']

[tool.flit.module]
name = "brainmass"

[project.urls]
homepage = 'http://github.com/chaobrain/brainmass'
repository = 'http://github.com/chaobrain/brainmass'

[project.optional-dependencies]
testing = [
    'pytest',
]
